--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -83,6 +83,7 @@
 % List of Figures, Tables
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \listoffigures\addcontentsline{toc}{chapter}{\listfigurename}
+\lstlistoflistings\addcontentsline{toc}{chapter}{\lstlistlistingname}
 \listoftodos 
 
 nyugi, ez a rész nem lesz benne a véglegesben 
