--- a/src/content/appendices/xsts_language.tex
+++ b/src/content/appendices/xsts_language.tex
@@ -1,119 +1,105 @@
 %----------------------------------------------------------------------------
-\clearpage\section{XSTS Language}\label{sec:xsts_language}
+\section{XSTS Language}\label{sec:xsts_language}
 %----------------------------------------------------------------------------
 
 In this appendix I introduce the exact language constructs for the XSTS language 
 
 \subsection{Types}
 
-XSTS contains two default variable types, logical variables (\emph{boolean}) and mathematical integers (\emph{integer}). Types defined this way make up the domains \(D_{v1}, D_{v2}, \dots, D_{vn}\) introduced in \autoref{def:xsts}. XSTS also allows the user to define \emph{custom types}, similarly to enum types in common programming languages.
+XSTS contains two default variable types, logical variables (\emph{boolean}) and mathematical integers (\emph{integer}). XSTS also allows the user to define \emph{custom types}, similarly to enum types in common programming languages.
 
 A custom type can be declared the following way:
 
-\begin{lstlisting}
-	type <name> : { <literal_1>, . . . , <literal_n> }
-\end{lstlisting}
+\begin{lstlisting}[language=xsts]
+type <name> : { <literal_1>, . . . , <literal_n> }
 
-Where \(D_{name} = \{ literal_1, \dots, literal_n \}\).
+type Color : { RED, GREEN, BLUE }
+\end{lstlisting}
 
 \subsection{Variables}
 
 Variables can be declared the following way, where \verb|<value>| denotes the value that will be assigned to the variable in the initialization vector:
 
-\begin{lstlisting}
-	var <name> : <type> = <value>
+\begin{lstlisting}[language=xsts]
+var <name> : <type> = <value>
 \end{lstlisting}
 
-Where \(v_{name}\) will be in domain \(D_{type}\).
+The variable can only take a value of the specified type.
 
 If the user wishes to declare a variable without an initial value, this is possible as well:
 
-\begin{lstlisting}
-	var <name> : <type>
+\begin{lstlisting}[language=xsts]
+var <name> : <type>
 \end{lstlisting}
 
 A variable can be tagged as a control variable with the keyword \verb|ctrl|:
 
-\begin{lstlisting}
-	ctrl var <name> : <type>
+\begin{lstlisting}[language=xsts]
+ctrl var <name> : <type>
 \end{lstlisting}
 
 In which case the variable \(v\) will also be added to \(V_C\) (the set of control variables).
 
-\subsubsection{Basic operations}
+Examples:
 
-Operations make up the set \(Ops\) introduced in \autoref{def:xsts}. These operations, and their compositions define the behaviour of the XSTS model.
-
-\paragraph{Assume}
-
-An assumption operation can only be executed, if and only if its \emph{expression} evaluates to \emph{true}. This fact means, that if a composite operation contains a \emph{falsy} assumption, the whole composite operation will not fire.
-
-A simple assumption operation can be stated like the following:
-
-\begin{lstlisting}
-	assume <expr>
+\begin{lstlisting}[language=xsts]
+var a : integer
+ctrl var b : boolean = false
+var c : Color = RED
 \end{lstlisting}
 
-\paragraph{Assignment}
+\subsubsection{Operations}
 
-Assignments have the following syntax, where \verb|<varname>| is the name of a variable and
-\verb|<expr>| is an expression of the same type:
+The behaviour of XSTS can be described using basic and composite operations. Basic operations include assignments, assumptions and havocs. In the following, you can see an example for each, where \verb*|<expr>| is an expression returning a value, and \verb*|<varname>| is the name of a variable.
 
-\begin{lstlisting}
-	<varname> := <expr>
+\begin{lstlisting}[language=xsts]
+assume <expr>
+
+<varname> := <expr>
+
+havoc <varname>
 \end{lstlisting}
 
-An assignment operation overwrites the variables value upon execution.
+Composite operations are either non-deterministic choices, sequences or parallels. Nondeterministic choices have the following syntax, where \verb|<operation>| are arbitrary basic or composite operations:
 
-\paragraph{Havoc}
-
-Havocs give the XSTS models randomness, by randomly \emph{assigning} a value.
-
-The syntax of havocs is the following, where \verb|<varname>| is the name of a variable:
-
-\begin{lstlisting}
-	havoc <varname>
+\begin{lstlisting}[language=xsts]
+choice { 
+	<operation>
+} or { 
+	<operation>
+}
 \end{lstlisting}
-
-\subsection{Composite operations}
-
-Composite operations give way to building up more complicated transition trees, by providing nesting the already introduced simple operations.
-
-\paragraph{Choice}
-
-Non-deterministic choices work by randomly executing one and only one of its composed operations.
-
-Non-deterministic choices have the following syntax, where \verb|<operation>| are arbitrary basic or composite operations:
-
-\begin{lstlisting}
-	choice { <operation> } or { <operation> }
-\end{lstlisting}
-
-\paragraph{Sequence}
-
-Sequences execute all composed operations one-by-one from top to bottom.
 
 Sequences have the following syntax:
 
-\begin{lstlisting}
-	<operation>
-	<operation>
-	<operation>
+\begin{lstlisting}[language=xsts]
+<operation>
+<operation>
+<operation>
 \end{lstlisting}
 
-\subsection{Transitions}
+And parallels have the following syntax:
 
-Each transition is a single operation (basic or composite). We distinguish between three sets of transitions, \emph{Tran}, \emph{Init} and \emph{Env} - associating to the three different operation sets introduced in \autoref{def:xsts}. Transitions are described with the following syntax, where \verb|<transition-set>| is either \verb|tran|, \verb|env| or \verb|init|:
+\begin{lstlisting}[language=xsts]
+parallel { 
+	<operation>
+	<operation>
+}
+\end{lstlisting}
 
-\begin{lstlisting}
-	<transition-set> {
-		<operation>
-	} or {
-		<operation>
-	} or
-	...
-	or {
-		<operation>
-	}
-	
+\subsubsection{Transitions}
+
+Each transition is a single operation (basic or composite). We distinguish between three
+sets of transitions, \emph{Tran}, \emph{Init} and \emph{Env}. Transitions are described with the following syntax, where \verb|<transition-set>| is either \verb|tran|, \verb|env| or \verb|init|:
+
+\begin{lstlisting}[language=xsts]
+<transition-set> {
+	<operation>
+} or {
+	<operation>
+} or
+//...
+or {
+	<operation>
+}
 \end{lstlisting}
